--- a/.github/workflows/cd-ci.yaml
+++ b/.github/workflows/cd-ci.yaml
@@ -2,7 +2,7 @@
   on: 
     push: 
         branches: 
-            - master
+            - 'master'
    jobs: 
         build:
             runs-on: ubuntu-lastest
