--- a/.github/workflows/cd-ci.yaml
+++ b/.github/workflows/cd-ci.yaml
@@ -9,7 +9,8 @@ jobs:
   build:
     runs-on: ubuntu-lastest
     steps:
-      - uses: actions/checkout@v2
+      - name: Setup .NET environment
+      uses: actions/checkout@v2
 
       # - name: Setup .NET environment
       # - users: actions/setup-dotnet@v3
