--- a/.github/workflows/cd-ci.yaml
+++ b/.github/workflows/cd-ci.yaml
@@ -9,18 +9,16 @@ jobs:
   build:
     runs-on: ubuntu-lastest
     steps:
-        - name: Check out code
-          uses: actions/checkout@v2
-        
-    
+      - name: Check out code
+        uses: actions/checkout@v2
 
-      # - name: Setup .NET environment
-      # - users: actions/setup-dotnet@v3
-      # with:
-      #     dotnet-version: '3.1.x'
+      - name: Setup .NET environment
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: "3.1.x"
 
-      # - name: Restore dependencies
-      # run: dotnet restore
+      - name: Restore dependencies
+        run: dotnet restore
 
-      # - name: Build App
-      # run: dotnet build -c Release
+      - name: Build App
+        run: dotnet build -c Release
