--- a/.github/workflows/cd-ci.yaml
+++ b/.github/workflows/cd-ci.yaml
@@ -29,17 +29,11 @@ jobs:
       - name: Publish app
         run: dotnet publish -o ./out  
 
-      - name: 'Run Azure webapp deploy action using publish profile credentials'
+      - name: Deploy
         uses: azure/webapps-deploy@v2
         with:
-            app-name: node-rn
-            publish-profile: ${{ secrets.azureWebAppPublishProfile }} 
-
-    #   - name: Deploy
-    #     uses: azure/webapps-deploy@v2
-    #     with:
-    #       app-name: test-ci-ci
-    #       publish-profile: ${{ secrets.AZURE_SECRET_PUBLISH_SECRET }}
-    #       package: ./out
+          app-name: test-ci-ci
+          publish-profile: ${{ secrets.AZURE_SECRET_PUBLISH_SECRET }}
+          package: ./out
 
       
