--- a/ci_cd_1/appsettings.Production.json
+++ b/ci_cd_1/appsettings.Production.json
@@ -6,10 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "Position": {
-    "Title": "Editor",
-    "Name": "Joe Smith"
-  },
-  "MyKey": "=== Develop environment  ===="
+  "MyKey": "=== Production environment ===="
 }
