--- a/ci_cd_1/appsettings.UAT.json
+++ b/ci_cd_1/appsettings.UAT.json
@@ -11,5 +11,5 @@
     "Title": "Editor",
     "Name": "Joe Smith"
   },
-  "MyKey": "=== Develop environment  ===="
+  "MyKey": "=== UAT environment ===="
 }
