--- a/ci_cd_1/Properties/launchSettings.json
+++ b/ci_cd_1/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "ci_cd_1": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "test",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
